--- a/app/views/centre_service_details/show.html.erb
+++ b/app/views/centre_service_details/show.html.erb
@@ -22,7 +22,7 @@
 
             <%# Show concierge number if at non-palm size %>
             <div class="hide-fully--palm txt-xlrg">
-              <span class="icon icon--phone2 icon--mega icon--spacing-lrg" aria-hidden="true"></span>
+              <span class="icon icon--phone2 icon--mega icon--spacing" aria-hidden="true"></span>
               <span class="hide-visually">Phone number</span>
               <%= @concierge.phone_no %>
             </div>
