--- a/app/views/pages/terms_conditions.html.erb
+++ b/app/views/pages/terms_conditions.html.erb
@@ -102,7 +102,7 @@
 
     <p>Westfield will never ask you to confirm any account or credit card details via email. If you receive an email claiming to be from westfield.com asking you to do so, please ignore it and do not respond.</p>
 
-    <p>The Australian Government has published additional information about protecting yourself in online transactions. This is available at <%= link_to 'http://www.staysmartonline.gov.au/', 'http://www.staysmartonline.gov.au/', rel: 'external' %> (this website is not provided by the Westfield Group).</p>
+    <p>The Australian Government has published additional information about protecting yourself in online transactions. This is available at <%= link_to 'http://www.staysmartonline.gov.au/', 'http://www.staysmartonline.gov.au/', rel: 'external', target: '_blank' %> (this website is not provided by the Westfield Group).</p>
 
     <h3>10. Viruses, hacking and other offences</h3>
 
