--- a/app/views/layouts/base.html.erb
+++ b/app/views/layouts/base.html.erb
@@ -29,7 +29,7 @@
   <%= yield :link_rels %>
 
   <%# Title %>
-  <title><%= meta.page_title.html_safe %></title>
+  <title><%= page_title %></title>
   <%# //Title %>
 
   <%= render "shared/stylesheets_global" %>
