Adding forgotten promo tile images for sub pages

--- a/app/views/shared/_footer_promo_tiles.html.erb
+++ b/app/views/shared/_footer_promo_tiles.html.erb
@@ -2,7 +2,7 @@
   <% [promo_tile_1, promo_tile_2].each do |promo| %>
     <div class="grid__item non-palm-one-half">
       <div class="promo-tile box">
-        <%= image_tag promo[:image_src], alt: '', width: 589, crop: 'limit', quality: 90 %>
+        <%= image_tag promo[:image_src], alt: '', width: 589, crop: 'limit', quality: 90, fetch_format: 'auto' %>
         <span class="promo-tile__icon icon <%= promo[:icon] %> icon--flush-top" aria-hidden="true"></span>
         <div class="islet island-non-palm">
           <h2 class="promo-tile__hdr"><%= promo[:heading] %></h2>
