--- a/app/assets/stylesheets/partials/modules/_filters.scss
+++ b/app/assets/stylesheets/partials/modules/_filters.scss
@@ -71,12 +71,12 @@
       */
       .filters__trigger {
 
-        &.filters__trigger--wide {display: none !important;}
+        &.filters__trigger--wide {display: none;}
 
         @include respond-min($lap-lrg) {
-          &.filters__trigger--narrow {display: none !important;}
+          &.filters__trigger--narrow {display: none;}
 
-          &.filters__trigger--wide {display: block !important;}
+          &.filters__trigger--wide {display: block;}
         }
       }
 
