--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,4 +1,4 @@
-<%= render "/products/national_view_dialog" if national_products? and @product.nil?%>
+<%= render "/products/national_view_dialog" if national_product_index? %>
 
 <%= render @centre ? "/layouts/header" : "/layouts/header_national" %>
 
