Cleaning up Microdata - WSF-6198

--- a/app/assets/javascripts/init/deferred_images.js.coffee.erb
+++ b/app/assets/javascripts/init/deferred_images.js.coffee.erb
@@ -4,7 +4,7 @@ do ($ = jQuery, name = 'deferImages') ->
 
   class DeferredImageLoader
 
-    attrs: ['src', 'alt', 'itemprop']
+    attrs: ['src', 'alt']
 
     constructor: (@el, @img = $('<img>')) ->
 
