--- a/app/views/centre_info/show.html.erb
+++ b/app/views/centre_info/show.html.erb
@@ -21,7 +21,7 @@
 <div class="divider divider--lrg">
 
   <%# Text formatted %>
-  <div class="txt-formatted">
+  <div class="txt-formatted" itemscope itemtype="http://schema.org/Organization">
 
     <%= render 'getting_here' %>
     <%= render :partial => 'parking' if @parking.present? %>
