--- a/app/views/stores/_header_with_banner.html.erb
+++ b/app/views/stores/_header_with_banner.html.erb
@@ -2,7 +2,7 @@
 <header>
 
   <%# Storefront name %>
-  <h1 class="hide-visually" itemprop="name"><%= @store.name %></h1>
+  <h1 class="hide-visually"><%= @store.name %></h1>
   <%# //Storefront name %>
 
   <%# Storefront banner and SEO description carousel %>
