--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -40,7 +40,7 @@
       <%# Store details %>
       <div class="stores-maps__list-detail">
 
-        <article class="storefront" role="article" itemscope itemtype="http://schema.org/Organization">
+        <article class="storefront" role="article">
 
           <%# Header (carousel) %>
           <%= render @store.has_storefront? ? 'header_with_banner' : 'header_without_banner' %>
@@ -74,7 +74,7 @@
                 <%# Store phone no %>
                 <%- if @store.phone_number.present? %>
                   <dt class="hide-visually hide-fully--palm">Store phone number</dt>
-                  <dd class="hide-fully--palm" itemprop="telephone">
+                  <dd class="hide-fully--palm">
                     <%= phone_format @store.phone_number %>
                     <span class="icon icon--phone2 icon--xlrg icon--fixed-width" aria-hidden="true"></span>
                   </dd>
@@ -85,7 +85,7 @@
                 <%- if @store.email_address.present? %>
                   <dt class="hide-visually">Store email</dt>
                   <dd class="txt-truncate">
-                    <%= mail_to @store.email_address, @store.email_address, itemprop: 'email' %>
+                    <%= mail_to @store.email_address, @store.email_address %>
                     <span class="icon icon--email icon--xlrg icon--fixed-width" aria-hidden="true"></span>
                   </dd>
                 <%- end %>
@@ -110,10 +110,7 @@
                 <%# Phone no %>
                 <%- if @store.phone_number.present? %>
                   <%= phone_link @store.phone_number, class: 'storefront-storelist-phone-map-links__cell storefront-storelist-phone-map-links__cell--phone hide-fully--non-palm' do |phone_number| %>
-                    <span class="hide-visually">
-                      Call store:
-                      <span itemprop="telephone"><%= phone_number %></span>
-                    </span>
+                    <span class="hide-visually">Call store: <%= phone_number %></span>
                     <span class="icon icon--phone2 icon--flush-top storefront-storelist-phone-map-links__cell__valign"></span>
                   <% end %>
                 <%- end %>
