--- a/app/views/styleguide/modules/_centre_location.html.erb
+++ b/app/views/styleguide/modules/_centre_location.html.erb
@@ -25,13 +25,13 @@
         <img alt="" height="130" onerror="this.remove();" src="http://res.cloudinary.com/wlabs/image/asset/c_thumb,f_auto,h_130,w_120/bondijunction-c5c77c76a20c6c4f38544a049e61509c.jpg" width="120">
       </div>
       <div class="slats__body islet">
-        <p itemscope="" itemtype="http://schema.org/Organization">
-          <span itemprop="address" itemscope="" itemtype="http://schema.org/PostalAddress">
+        <p>
+          <span itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
             <span itemprop="streetAddress">500 Oxford St</span>
             <br>
             <span itemprop="addressLocality">Bondi Junction</span>
             <br>
-            <span itemprop="addressRegion">NSW 2022</span>
+            <span itemprop="addressRegion">NSW</span> <span itemprop="postalCode">2022</span>
           </span>
         </p>
         <a href="https://maps.google.com/maps?q=-33.891289,151.250815" rel="external" target="_blank">
