--- a/app/views/centre_info/_contact_us.html.erb
+++ b/app/views/centre_info/_contact_us.html.erb
@@ -11,7 +11,7 @@
         <div class="grid__item non-palm-one-half">
 
           <%# Show centre number if at non-palm size %>
-          <div class="box island txt-center hide-fully--palm" itemscope itemtype="http://schema.org/Organization">
+          <div class="box island txt-center hide-fully--palm">
             <span class="icon icon--phone2 icon--kilo icon--spacing-lrg" aria-hidden="true"></span>
             <span class="hide-visually">Phone number</span>
             <span itemprop="telephone"><%= @centre.phone_number %></span>
@@ -37,7 +37,7 @@
           <div class="box island txt-center txt-truncate">
             <span class="icon icon--email icon--kilo icon--spacing-lrg" aria-hidden="true"></span>
             <span class="hide-visually">Email</span>
-            <%= mail_to @centre.email_address, @centre.email_address %>
+            <%= mail_to @centre.email_address, @centre.email_address, itemprop: "email" %>
           </div>
         </div>
       <% end %>
