--- a/app/views/shared/tiles/_event.html.erb
+++ b/app/views/shared/tiles/_event.html.erb
@@ -1,3 +1,5 @@
+<%= content_for :microdata, 'itemprop=event itemscope itemtype=http://schema.org/Event' %>
+
 <%# Tile event image %>
 <div class="tile__image">
   <%= fetch_image_tag result.image,
@@ -20,7 +22,7 @@
 
   <%# Tile event title and date %>
   <div class="tile__meta__inner">
-    <h3 class="tile__meta__hdr txt-truncate"><%= result.name %></h3>
+    <h3 class="tile__meta__hdr txt-truncate" itemprop="name"><%= result.name %></h3>
     <p class="tile__meta__desc txt-truncate"><%= display_event_date(result) %></p>
   </div>
   <%# //Tile event title and date %>
