--- a/app/views/stores/_header_without_banner.html.erb
+++ b/app/views/stores/_header_without_banner.html.erb
@@ -8,7 +8,7 @@
         <div class="storefront__flexslider-storename vert-align">
           <div class="vert-align__inner">
             <h1<% if @store.name.length > 58 %> class="is-long-store-name"<% end %>>
-              <span itemprop="name"><%= @store.name %></span>
+              <%= @store.name %>
             </h1>
           </div>
         </div>
