--- a/app/views/styleguide/modules/_timeline.html.erb
+++ b/app/views/styleguide/modules/_timeline.html.erb
@@ -8,7 +8,7 @@
     </em>
   </dt>
   <dd>
-    <time datetime="2014-01-15T09:00+1100" itemprop="startDate">9:00am</time> &#8211; <time datetime="2014-01-15T17:30+1100" itemprop="endDate">5:30pm</time>
+    <time datetime="2014-01-15T09:00+1100">9:00am</time> &#8211; <time datetime="2014-01-15T17:30+1100">5:30pm</time>
   </dd>
   <dt>
     Tuesday
@@ -18,7 +18,7 @@
     </em>
   </dt>
   <dd>
-    <time datetime="2014-02-04T09:00+1100" itemprop="startDate">9:00am</time> &#8211; <time datetime="2014-02-04T17:30+1100" itemprop="endDate">5:30pm</time>
+    <time datetime="2014-02-04T09:00+1100">9:00am</time> &#8211; <time datetime="2014-02-04T17:30+1100">5:30pm</time>
   </dd>
 </dl>
 <% end %>
