add keyword filter and keyword toggle CSS and base JS

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -72,6 +72,7 @@
 @import "partials/buttons/faux-link";
 @import "partials/buttons/expand-collapse";
 @import "partials/buttons/site-feedback";
+@import "partials/buttons/toggle";
 
 /* Layout */
 @import "partials/layout/containers";
