--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -15,11 +15,19 @@
 
     <div ng-controller="StoreListController" class="stores-maps__inner stores-maps__inner--listing <%= 'is-filter-applied' if @active_category %>">
       <%# Filters & list/map toggle button %>
-      <div class="stores-maps__filters-toggle">
+      <div class="stores-maps__filters-toggle js-stores-filters">
 
         <div class="container container--position">
 
           <h1 class="stores-maps__filters-toggle__hdr hide-visually">Stores</h1>
+
+          <%# List/map toggle %>
+          <button type="button" class="stores-maps__toggle btn btn--main btn--main-white btn--main-compact-icon js-stores-maps-toggle-btn" aria-owns="stores-maps-toggle-listing-detail stores-maps-toggle-map">
+            <span class="hide-visually--palm">View <span class="js-stores-maps-toggle-btn-txt">map</span></span>
+            <span class="icon icon--map2 icon--lrg" aria-hidden="true"></span>
+            <span class="icon icon--list icon--lrg" aria-hidden="true"></span>
+          </button>
+          <%# //List/map toggle %>
 
           <%# Filters %>
           <div class="stores-maps__filters">
@@ -128,32 +136,43 @@
             <%# //Applied category %>
 
             <%# Gift card filter %>
-            <form id="giftCardForm" action="<%= request.path %>" data-pjax method="get" class="stores-maps__filters__item js-map-view-state">
-                <input type="hidden" name="map" value="{{viewingMap}}">
-                <legend class="hide-visually">Gift card filter</legend>
-                <label for="gift-card-store-filter" class="btn btn--main btn--main-dark btn--main-checkbox-toggle btn--main-checkbox-toggle-icon <%= 'is-disabled' if !@stores.any_accepting_gift_cards? %> <%= 'is-active' if filtering_gift_cards? %>">
-                  <input ng-init="gift_cards = <%= filtering_gift_cards? ? true : false %>" ng-model="gift_cards" ng-change="giftCardChange()" id="gift-card-store-filter" type="checkbox" name="gift_cards" value="true" class="btn--main-checkbox-toggle__input" <%= 'checked' if filtering_gift_cards? %><%= 'disabled' unless @stores.any_accepting_gift_cards? %>>
-                  <span class="btn--main-checkbox-toggle__lbl">
-                    <span class="hide-visually--palm">Westfield </span>
-                    Gift Card
-                    <span class="hide-visually--palm"> accepted</span>
-                    <span aria-hidden="true" class="icon icon--gift-card icon--xlrg icon--flush-top-mozilla"></span>
-                  </span>
-                </label>
-                <button type="submit" class="js-enabled-hide" <%= 'checked' if filtering_gift_cards? %><%= 'disabled' unless @stores.any_accepting_gift_cards? %>>Go</button>
+            <form id="giftCardForm" action="<%= request.path %>" method="get" class="stores-maps__filters__item js-map-view-state">
+              <input type="hidden" name="map" value="{{viewingMap}}">
+              <legend class="hide-visually">Gift card filter</legend>
+              <label for="gift-card-store-filter" class="btn-toggle btn btn--main btn--main-white btn--main-ios-toggle <%= 'is-disabled' if !@stores.any_accepting_gift_cards? %> <%= 'is-active' if filtering_gift_cards? %>">
+                <input ng-init="gift_cards = <%= filtering_gift_cards? ? true : false %>" ng-model="gift_cards" ng-change="giftCardSubmit()" id="gift-card-store-filter" type="checkbox" name="gift_cards" value="true" class="hide-visually" <%= 'checked' if filtering_gift_cards? %><%= 'disabled' unless @stores.any_accepting_gift_cards? %>>
+                <span class="btn-toggle__lbl btn--main-ios-toggle__lbl">
+                  <span aria-hidden="true" class="icon icon--gift-card icon--xlrg icon--flush-top-mozilla"></span>
+                  <span class="hide-visually--palm">Westfield </span>
+                  Gift Card
+                  <span class="hide-visually--palm"> accepted</span>
+                </span>
+                <span class="btn-toggle__handle btn--main-ios-toggle__handle"></span>
+              </label>
+              <button type="submit" class="js-enabled-hide" <%= 'checked' if filtering_gift_cards? %><%= 'disabled' unless @stores.any_accepting_gift_cards? %>>Go</button>
             </form>
             <%# //Gift card filter %>
+
+            <%# Keyword Filter toggle %>
+            <button type="button" class="stores-maps__filters__item stores-maps__keyword-filter-toggle btn btn--main btn--main-white btn--main-compact-icon js-stores-keyword-filter-toggle" toggle-visibility="keyword-filter" aria-owns="">
+              <span class="icon icon--keyword-filter icon--lrg" aria-hidden="true"></span>
+            </button>
+            <%# //Keyword Filter toggle %>
+
+            <%# Keyword Filter %>
+            <div id="keyword-filter" class="stores-maps__filters__item stores-maps__filters__item--keyword-filter js-disabled-hide">
+              <label for="keyword-filter-input" class="hide-visually">Filter Stores by Keyword</label>
+              <input id="keyword-filter-input" type="search" placeholder="Enter store name" class="txt-input js-stores-keyword-filter">
+            </div>
+            <%# Keyword Filter %>
+
+        </div>
+        <%# //Filters %>
+
 
           </div>
           <%# //Filters %>
 
-          <%# List/map toggle %>
-          <button type="button" class="stores-maps__toggle btn btn--main btn--main-white btn--main-compact-icon js-stores-maps-toggle-btn" aria-owns="stores-maps-toggle-listing-detail stores-maps-toggle-map">
-            <span class="hide-visually--palm">View <span class="js-stores-maps-toggle-btn-txt">map</span></span>
-            <span class="icon icon--map2 icon--lrg" aria-hidden="true"></span>
-            <span class="icon icon--list icon--lrg" aria-hidden="true"></span>
-          </button>
-          <%# //List/map toggle %>
         </div>
 
         <%# Post filter count %>
@@ -178,10 +197,10 @@
       <%# //Filters & list/map toggle button %>
 
       <%# Stores list %>
-      <div class="stores-maps__list-detail js-defer-image-load-container" id="stores-maps-toggle-listing-detail">
-        <dl class="stores-list js-fastclick">
+      <div class="stores-maps__list-detail js-defer-image-load-container js-store-list-position" id="stores-maps-toggle-listing-detail">
+        <dl class="stores-list js-fastclick js-keyword-filter-list">
           <% @stores.in_alpha_groups.each do |letter, stores| %>
-            <dt>
+            <dt class="js-stores-letter js-stores-letter-<%= letter %>">
               <div class="stores-list__inner container">
                 <%= letter %>
               </div>
