Applying Microdata to movies pages - WSF-6198

--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -44,7 +44,7 @@
       <li class="grid__item one-half lap-sml-one-third non-palm-one-quarter">
 
         <%# Movie tile %>
-        <article class="tile box test-movie" role="article">
+        <article class="tile box test-movie" role="article" itemprop="event" itemscope itemtype="http://schema.org/Event">
           <a href="<%= centre_movie_path(centre_id: @centre.code, id: movie.id, movie_name: movie.title.to_slug) %>">
 
             <%# Movie tile image %>
@@ -59,7 +59,10 @@
 
             <%# Movie tile meta %>
             <div class="tile__meta">
-              <h3 class="tile__meta__hdr txt-truncate test-title"><%= movie.title %></h3>
+              <h3 class="tile__meta__hdr txt-truncate test-title" itemprop="name"><%= movie.title %></h3>
+              <p class="hide-fully" itemscope itemtype="http://schema.org/Place" itemprop="location">
+                <span itemprop="name"><%= @cinema.name %>, <%= @centre.name %></span>
+              </p>
               <%# Not implementing next session time at the moment %>
               <%# [BACKEND] Add next session time and output the time as ISO date format (the session time in the movie feed we get) in `datetime` attribute as indicated below %>
               <%#<p class="tile__meta__desc">Next session at <time datetime="[session time]"> Time.parse(movie.next_session.start_time).strftime("%l:%M %P (%e)") </time></p> %>
